--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,12 @@ matrix:
           packages:
             - clang-3.8
           sources: *sources
-    - os: osx
-      osx_image: xcode8
-      env: CC=gcc-4.9 && CXX=g++-4.9
-    - os: osx
-      osx_image: xcode8
-      env: CC=clang && CXX=clang++
+#    - os: osx
+#      osx_image: xcode8
+#      env: CC=gcc-4.9 && CXX=g++-4.9
+#    - os: osx
+#      osx_image: xcode8
+#      env: CC=clang && CXX=clang++
 before_install:
   - echo $LANG
   - echo $LC_ALL
@@ -39,14 +39,3 @@ script:
 branches:
   only:
     - master
-notifications:
-  recipients:
-    - sparkprime@gmail.com
-  email:
-    on_success: change
-    on_failure: always
-  irc:
-    channels:
-      - "chat.freenode.net#jsonnet"
-    template:
-      - "%{repository}/%{branch} (%{commit} - %{author}): %{message}"
